namespace Player
{
    public static class PlayerAnimationTriggers
    {
        public const string IdleStateEntered = nameof(IdleStateEntered);
        public const string WalkingStateEntered = nameof(WalkingStateEntered);
        public const string CrouchStateEntered = nameof(CrouchStateEntered);
        public const string MovingCrouchStateEntered = nameof(MovingCrouchStateEntered);
    }
}